afhankelijkheden toegevoegd; template schermen toegevoegd; klaar om gecloned te worden

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "Blank Template",
+    "name": "Limburgs Mooiste app",
     "slug": "Limburgs-Mooiste-app",
     "privacy": "public",
     "sdkVersion": "36.0.0",
