--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mdi/js": "^5.0.45",
     "@mdi/react": "^1.3.0",
+    "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
