--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/bottom-tabs": "^5.1.1",
     "@react-navigation/material-bottom-tabs": "^5.1.1",
+    "@react-navigation/material-top-tabs": "^5.1.4",
     "@react-navigation/native": "^5.0.9",
     "@react-navigation/stack": "^5.1.1",
     "base-64": "^0.1.0",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-tab-view": "^2.13.0",
     "react-native-web": "~0.11.7"
   },
   "devDependencies": {
