--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-paper": "^3.6.0",
     "react-native-profile-picture": "^1.0.0",
     "react-native-progress": "^4.0.3",
+    "react-native-progress-bar-animated": "^1.0.6",
     "react-native-reanimated": "~1.4.0",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
