--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.1.1",
     "base-64": "^0.1.0",
     "expo": "~36.0.0",
+    "expo-cli": "^3.18.0",
     "expo-facebook": "^8.0.0",
     "expo-file-system": "~8.0.0",
     "firebase": "^7.14.0",
